tdf#104150 DOCX import: handle <w:displayBackgroundShape/>

Regression from commit 992da0d5cf04497bad55637f6a6ebfcdaec03e16
(bnc#817956 DOCX import of document background color, 2013-05-27),
<w:background> should be ignored when <w:displayBackgroundShape/> is
missing from settings.xml, it turns out.

This also requires generating the
ooxml:CT_Settings_displayBackgroundShape token from the RTF tokenizer.

(cherry picked from commit 38a1e19ae49ac30757e4020b60adee7c30f3deb9)

Change-Id: I6d7986904cedb952998a87e7648919ae34adc360
Reviewed-on: https://gerrit.libreoffice.org/33224
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>